--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,9 @@
     "strictPropertyInitialization": false,
     "typeRoots": [
       "./node_modules/@types"
-    ]
+    ],
+    "baseUrl": "./",
+    "paths": {"/opt/nodejs/productsLayer": ["lambda/products/layers/productsLayers/nodejs/productRepository"]}
   },
   "exclude": [
     "node_modules",
